fixed visibility issue

--- a/app/stylus/header.styl
+++ b/app/stylus/header.styl
@@ -60,10 +60,10 @@ body > header
       font-size 30px
   ul.link-list
     float right
-    li
-      a
-        font-size 14px
-        display block
-        float left
-        line-height 40px
-        padding 0 20px 0 20px
+    a
+      font-size 14px
+      display block
+      cursor pointer
+      float left
+      line-height 40px
+      padding 0 20px 0 20px
