--- a/app/stylus/init.styl
+++ b/app/stylus/init.styl
@@ -42,17 +42,10 @@ h2
 a
   text-decoration none
   color #222
-.next
-  position absolute
-  background highlight-yellow
-  bottom 20px
-  left 50%
-  border-radius 4px
-  padding 10px
-  margin-left -100px
-  cursor pointer
-  width 200px
-  text-align center
+.hidden
+  visibility hidden
+  overflow hidden
+  height 0
 
 .container
   width container-width
